--- a/public/welcome.html
+++ b/public/welcome.html
@@ -66,36 +66,11 @@
               <table border="0" cellpadding="0" cellspacing="0" id="templateContainerMiddleBtm" width="100%">
                 <tbody><tr>
                   <td class="bodyContent" valign="top" mc:edit="welcomeEdit-11">
-                    <h3><strong>Get a 20% discount on your Schoolforce
-                    ticket</strong></h3>
-
-                    <h4>Exclusive to Flight School members, receive a 20%
-                    discount on your Schoolforce ticket when you use the coupon
-                    code FLIGHTSCHOOL.</h4><a class="blue-btn" href="http://blog.autopilothq.com/lead-nurturing-secrets/"><strong>Buy
-                    Ticket</strong></a>
+                    <h3><strong>Verify you email</strong></h3>
+                      <a class="blue-btn" href="http://localhost:8000/api/v1/account/activate/{{ id }}/{{ activation_token }}"><strong>Activate</strong></a>
                   </td>
                 </tr>
               </tbody></table><!-- // END BODY -->
-            </td>
-          </tr>
-
-          <tr>
-            <td align="center" class="unSubContent" id="bodyCellFooter" valign="top">
-              <table border="0" cellpadding="0" cellspacing="0" id="templateContainerFooter" width="100%">
-                <tbody><tr>
-                  <td valign="top" width="100%" mc:edit="welcomeEdit-11">
-                    <p style="text-align:center;"><img src="../backend/Welcome_files/cog-03.jpg" style="margin:0 auto 0 auto;display:inline-block;"></p>
-
-                    <h6 style="text-align:center;margin-top: 9px;">COG Inc</h6>
-
-                    <h6 style="text-align:center;">589​ Howard​ Street​</h6>
-
-                    <h6 style="text-align:center;">San​ Francisco,​ CA​ 94105​</h6>
-
-                    <h6 style="text-align:center;margin-top: 7px;"><a href="http://c0185784a2b233b0db9b-d0e5e4adc266f8aacd2ff78abb166d77.r51.cf2.rackcdn.com/v1_templates/--unsubscribe--">unsubscribe</a></h6>
-                  </td>
-                </tr>
-              </tbody></table>
             </td>
           </tr>
         </tbody></table><!--[if (gte mso 9)|(IE)]>
