new url for password reset

--- a/public/password-reset.html
+++ b/public/password-reset.html
@@ -65,7 +65,7 @@
                 <tbody><tr>
                   <td class="bodyContent" valign="top" mc:edit="welcomeEdit-11">
                     <h3><strong>Verify you email</strong></h3>
-                      <a class="blue-btn" href="http://localhost:8000/api/v1/account/password/reset/{{ token }}"><strong>Reset Password</strong></a>
+                      <a class="blue-btn" href="http://localhost:8080/resetpass?token={{ token }}"><strong>Reset Password</strong></a>
                   </td>
                 </tr>
               </tbody></table><!-- // END BODY -->
