--- a/public/welcome.html
+++ b/public/welcome.html
@@ -67,7 +67,7 @@
                 <tbody><tr>
                   <td class="bodyContent" valign="top" mc:edit="welcomeEdit-11">
                     <h3><strong>Verify you email</strong></h3>
-                      <a class="blue-btn" href="http://localhost:8000/api/v1/account/activate/{{ id }}/{{ activation_token }}"><strong>Activate</strong></a>
+                      <a class="blue-btn" href="{{ baseUrl }}/{{ id }}/{{ activation_token }}"><strong>Activate</strong></a>
                   </td>
                 </tr>
               </tbody></table><!-- // END BODY -->
